# SymmetryApplication

./: Mesh.cpp  Mesh.h  README.md  SymmetryApplication.pro  Triangle.h  Vertex.cpp  Vertex.h  common.pri  mesht.cpp  mesht.h  object3d.cpp  object3d.h
Harris3D/: Harris3D.pro
Harris3D/include/Harris3D/: Distance.h  Face.h  HarrisDetector.h  Mesh.h  Vertex.h  harris_global.h
Harris3D/src/: Face.cpp  HarrisDetector.cpp  Mesh.cpp  Vertex.cpp
RotationalSymmetry/: RotationalSymmetry.pro
RotationalSymmetry/src/: rotationalsymmetry.cpp
SimpleMesh/: CMakeLists.txt  SimpleMesh.pro
SimpleMesh/include/SimpleMesh/: mesh.h  triangle.h  vertex.h
SimpleMesh/include/SimpleMesh/io/: objreader.h  objwriter.h  offreader.h  offwriter.h
SimpleMesh/src/SimpleMesh/: mesh.cpp  triangle.cpp  vertex.cpp
SimpleMesh/src/SimpleMesh/io/: objreader.cpp  objwriter.cpp  offreader.cpp  offwriter.cpp
SymArch/: ArcBall.cpp  ArcBall.h  SymArch.pro  analysisbar.cpp  analysisbar.h  bufferedobject3d.cpp  bufferedobject3d.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  objectcontainer.cpp  objectcontainer.h  rotationaldialog.cpp  rotationaldialog.h  rotationparameterdialog.cpp  rotationparameterdialog.h  rotationparameterdialog.ui
Util/: Util.pro
Util/include/Util/: PropertySet.h  core.h  util.h  (+3 more)
Util/src/: PropertySet.cpp  core.cpp  rotation.cpp  util.cpp  vecmath.cpp
shaders/: bounding-shading.f.glsl  bounding-shading.v.glsl  per-vertex-shading.f.glsl  per-vertex-shading.v.glsl  phong-shading.f.glsl
sparseicp/: ICP.h
sparseicp/nanoflann-1.1.7/: README_wiki.html
(+2 files in other folders)
